--- a/index.html
+++ b/index.html
@@ -250,15 +250,15 @@
           <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out"
             data-aos-delay="100">
             <div class="image-stack">
-              <img src="assets/img/features-light-1.jpg" alt="" class="stack-front">
-              <img src="assets/img/features-light-2.jpg" alt="" class="stack-back">
+              <img src="assets/img/interfaces.jpg" alt="" class="stack-front">
+              <img src="assets/img/interfaces-2.jpg" alt="" class="stack-back">
             </div>
           </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="assets/img/features-light-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/workflows-2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3>Customizable Workflows</h3>
